crates/reinhardt-core/macros/tests/ui/injectable/fail/both_inject_and_no_inject.stderr
error: Field cannot have both #[inject] and #[no_inject] attributes
  --> tests/ui/injectable/fail/both_inject_and_no_inject.rs:25:2
   |
25 | /     #[inject]
26 | |     #[no_inject] // Error: cannot have both
27 | |     db: Database,
   | |________________^
